--- a/Swyzzy/Localization/en.lproj/Localizable.strings
+++ b/Swyzzy/Localization/en.lproj/Localizable.strings
@@ -9,3 +9,4 @@
 // Экран входа
 "sendCodeButton" = "Send Code";
 "aboutPolicy" = "By creating an account, you agree to our Terms of Service. More about how we use your data - in the Privacy Policy";
+"phoneNumber" = "Phone number";
