add Firebase logic of sending sms code

--- a/Swyzzy/Localization/en.lproj/Localizable.strings
+++ b/Swyzzy/Localization/en.lproj/Localizable.strings
@@ -10,3 +10,4 @@
 "sendCodeButton" = "Send Code";
 "aboutPolicy" = "By creating an account, you agree to our Terms of Service. More about how we use your data - in the Privacy Policy";
 "phoneNumber" = "Phone number";
+"moneyForSMS" = "Incoming SMS may be charged in accordance with the tariffs of your operator";
