--- a/Swyzzy/Localization/en.lproj/Localizable.strings
+++ b/Swyzzy/Localization/en.lproj/Localizable.strings
@@ -11,6 +11,10 @@
 "Base_ok" = "OK";
 "Base_cancel" = "Cancel";
 
+// Ошибка
+"Error_error" = "Error";
+"Error_repeatAfterSomeTime" = "Try to repeat after a while";
+
 // Экран входа
 "AuthScreen_sendCodeButton" = "Send Code";
 "AuthScreen_aboutPolicy" = "By creating an account, you agree to our Terms of Service. More about how we use your data - in the Privacy Policy";
